Terminando o cap3 e iniciando o cap4 do livro (Pandas in Action)

--- a/Python/Livros/Pandas in Action/Cap 3 - Series methods/cap3_seriesMethods.ipynb
+++ b/Python/Livros/Pandas in Action/Cap 3 - Series methods/cap3_seriesMethods.ipynb
@@ -1004,10 +1004,81 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "bd4caadb-e271-4228-8b6c-80e5ed62ae48",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "SeriesPokemon.apply(single_or_multi)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6360164f-1556-4bab-aced-17cde0c0865a",
+   "metadata": {},
+   "source": [
+    "### Aplica a função single_or_multi a cada elemento da SeriesPokemon \n",
+    "### e conta quantas vezes cada categoria ('Single' ou 'Multi') aparece"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "27541183-c9db-4b79-b114-dd4c664818b7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SeriesPokemon.apply(single_or_multi).value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c9b62f8a-82b4-4f21-8541-0a35014676af",
+   "metadata": {},
+   "source": [
+    "### Importa o módulo datetime e cria um objeto de data representando 26 de dezembro de 2020\n",
+    "### Converte a data para o formato do dia da semana (por exemplo, 'Saturday')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3d473b5b-afac-42f5-a590-aa10dbabd391",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import datetime as dt\n",
+    "today = dt.datetime(2020, 12, 26)\n",
+    "today.strftime('%A')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4a65bb7a-c6b3-4d40-85bd-dd6c737b20df",
+   "metadata": {},
+   "source": [
+    "### Converte os índices da SeriesWarUSA para o nome do dia da semana e conta a frequência de cada um"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f63d3861-f441-4ac4-8a37-792c58dc5a63",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'''Suponhamos que um historiador nos estende a mão e nos pede para determinar qual o dia da semana que viu mais batalhas durante a Guerra Revolucionária. A saída final deve ser uma série com os dias (domingo, segunda-feira e assim por diante) como rótulos de índice e uma contagem de batalhas em cada dia como os valores. Começando do zero, importe o conjunto de dados revolutionary_war.csv e execute as operações necessárias para chegar aos seguintes dados:\n",
+    "\n",
+    "Saturday 39\n",
+    "Friday 39\n",
+    "Wednesday 32\n",
+    "Thursday 31\n",
+    "Sunday 31\n",
+    "Tuesday 29\n",
+    "Monday 27\n",
+    "\n",
+    "'''\n",
+    "SeriesWarUSA.index.strftime('%A').value_counts()"
    ]
   }
  ],
